--- a/Drawing Board/Drawing.css
+++ b/Drawing Board/Drawing.css
@@ -1,4 +1,51 @@
-canvas
-{
-  border:1px solid black;
+body{
+  background: black;
+}
+h1{
+  color: white;
+  text-align: center;
+}
+div {
+  margin: 30px;
+  padding: 30px;
+   --border-width: 20px;
+  position: relative;
+
+  color: white;
+  background: #222;
+  &::after {
+    position: absolute;
+    content: "";
+    top: calc(-1 * var(--border-width));
+    left: calc(-1 * var(--border-width));
+    z-index: -1;
+    width: calc(100% + var(--border-width) * 2);
+    height: calc(100% + var(--border-width) * 2);
+    background: linear-gradient(
+      90deg,
+      rgb(148, 0, 211),
+      rgb(75, 0, 130),
+      rgb(45, 0, 180),
+      rgb(0, 50, 200),
+      rgb(0, 100, 155),
+      rgb(90, 255, 0),
+      rgb(180, 255, 0),
+      rgb(255, 255, 0),
+      rgb(255, 127, 0),
+      rgb(255, 67, 0),
+      rgb(255, 0 , 0)
+    );
+    background-size: 300% 300%;
+    background-position: 0 50%;
+    animation: moveGradient 15s infinite;
+  }
+}
+  @keyframes moveGradient{
+    50% {
+      background-position: 100% 50%;
+    }
+  }
+canvas {
+  background: white;
+  margin: 30px;
 }
